--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <title>RAG-Frontend</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="dark" id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
